# python-csv-json-converter

./: README.md  file__0.json  pyproject.toml  requirements.txt  x.json_0.json
python_csv_json_converter/: converter.py
tests/: test_python_csv_json_converter.py
tests/input/: file_0.csv
