[tool.poetry]
name = "python-csv-json-converter"
version = "0.1.0"
description = "Project to train the python language in the subject of postgraduate data science"
authors = ["Felipe Franca <felipejonataoliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
